--- a/login.html
+++ b/login.html
@@ -25,8 +25,8 @@
   <script>
     // بيانات ثابتة للمستخدمين (بدون قاعدة بيانات)
     const users = [
-      { username: "doctor1", password: "123456", role: "doctor" },
-      { username: "staff1",  password: "123456", role: "staff" }
+      { username: "doctor", password: "123456", role: "doctor" },
+      { username: "staff",  password: "123456", role: "staff" }
     ];
 
     function login() {
